--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
     "firebase": "^5.2.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
