--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "bulma": "^0.7.1",
     "firebase": "^5.2.0",
+    "firebaseui": "^3.1.1",
     "vue": "^2.5.16",
+    "vue-avatar": "^2.1.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
