--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.5.16",
     "vue-avatar": "^2.1.5",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuexfire": "^2.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
