--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "bulma": "^0.7.1",
     "firebase": "^5.2.0",
     "firebaseui": "^3.1.1",
+    "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.16",
     "vue-avatar": "^2.1.5",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuexfire": "^2.3.0"
