--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-avatar": "^2.1.5",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
+    "vue-toasted": "^1.1.24",
     "vuex": "^3.0.1",
     "vuexfire": "^3.0.0-alpha.5"
   },
