--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^3.0.1",
     "vue-toasted": "^1.1.24",
     "vuex": "^3.0.1",
+    "vuex-map-fields": "^1.3.0",
     "vuexfire": "^3.0.0-alpha.5"
   },
   "devDependencies": {
